Bug 3800: update libsbml to 5.8.0 (see branches/LibSBML5.8.0 )
svn path=/vcell/branches/VCell_5.2/VCell/; revision=16006

--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,7 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="VCell_5.2/nativelibs/win32"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="UserDocumentation"/>
 	<classpathentry kind="src" path="resources_vfrap"/>
 	<classpathentry kind="src" path="src_vfrap">
