Bug 3930: patch nagios vcell monitor
svn path=/vcell/branches/VCell_5.2/VCell/; revision=16044

--- a/.classpath
+++ b/.classpath
@@ -71,5 +71,8 @@
 	<classpathentry exported="true" kind="lib" path="lib/bcprov-jdk15on-147.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/sshj-0.8.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-compress-1.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.3.5.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
