Bug 4006: Port from 5.4: HTC Selection Management
svn path=/vcell/branches/VCell_5.2/VCell/; revision=16399

--- a/deployInfo/vcell64.properties
+++ b/deployInfo/vcell64.properties
@@ -93,6 +93,8 @@ vcell.htc.user = vcell
 vcell.htc.queue = 
 vcell.htc.pbs.home = /cm/shared/apps/torque/2.5.5/bin/
 vcell.htc.sge.home = /opt/gridengine/bin/lx26-amd64/
+vcell.htc.sgeModulePath = /etc/modulefiles/htc/sge
+vcell.htc.pbsModulePath = /etc/modulefiles/htc/pbs
 
 #
 # uncomment to specify which PBS or SGE submission queue to use for simulation jobs.
