--- a/log4j.properties
+++ b/log4j.properties
@@ -9,3 +9,5 @@ log4j.appender.A1.target=System.err
 log4j.appender.A1.layout.ConversionPattern=[%t] %-5p %c %x --> %m %n
 log4j.logger.org.vcell.sbml.vcell.SBMLImporter=DEBUG
 log4j.logger.ConfigTest=INFO
+log4j.logger.org.vcell.util.CommentStringTokenizer=FATAL
+log4j.logger.cbit.vcell.clientdb.ClientDocumentManager=INFO
