--- a/log4j.properties
+++ b/log4j.properties
@@ -11,3 +11,4 @@ log4j.logger.org.vcell.sbml.vcell.SBMLImporter=DEBUG
 log4j.logger.ConfigTest=INFO
 log4j.logger.org.vcell.util.CommentStringTokenizer=FATAL
 log4j.logger.cbit.vcell.clientdb.ClientDocumentManager=INFO
+log4j.logger.cbit.vcell.client.test.LibraryLoaderThread=TRACE
