Bug 3541: set property
svn path=/vcell/trunk/VCell/; revision=16996

--- a/deployInfo/vcell64.properties
+++ b/deployInfo/vcell64.properties
@@ -53,6 +53,10 @@ vcell.hybridMilAdaptive.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/Hyb
 # smoldyn spatial stochastic solver
 #
 vcell.smoldyn.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/smoldyn_x64
+#
+# NFSim
+#
+vcell.nfsim.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/NFsim_x64
 
 #
 # Server configuration
