--- a/.classpath
+++ b/.classpath
@@ -24,6 +24,7 @@
 	<classpathentry kind="lib" path="lib/jgraphx_2.2.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/colt_1.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/libthrift-0.9.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="src" path="src">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="VCell-5.4-trunk/nativelibs/win64"/>
@@ -98,6 +99,5 @@
 	<classpathentry exported="true" kind="lib" path="lib/jmathml.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-compress-1.8.1.jar"/>
 	<classpathentry kind="lib" path="testlib/copasi_build30.jar"/>
-	<classpathentry kind="lib" path="testlib/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
