--- a/log4j.properties
+++ b/log4j.properties
@@ -7,8 +7,4 @@ log4j.appender.A1.target=System.err
 #log4j.logger.java.sql=DEBUG
 #log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x --> %m %n
 log4j.appender.A1.layout.ConversionPattern=[%t] %-5p %c %x --> %m %n
-log4j.logger.org.vcell.sbml.vcell.SBMLImporter=DEBUG
-log4j.logger.ConfigTest=INFO
-log4j.logger.org.vcell.util.CommentStringTokenizer=FATAL
-log4j.logger.cbit.vcell.clientdb.ClientDocumentManager=INFO
-log4j.logger.cbit.vcell.client.test.LibraryLoaderThread=TRACE
+#log4j.logger.org.vcell.sbml.vcell.SBMLImporter=DEBUG
