Bug 3787: typo in property
svn path=/vcell/trunk/VCell/; revision=17161

--- a/deployInfo/log4jvcellservice.properties
+++ b/deployInfo/log4jvcellservice.properties
@@ -9,4 +9,4 @@ log4j.appender.A1.layout.ConversionPattern=[%t] %-5p %c %x --> %m %n
 #log4j.logger.cbit.vcell.message.server.htc.HtcProxy=DEBUG
 
 #produces much output by default
-log4j.org.apache.activemq.transport.AbstractInactivityMonitor=FATAL
+log4j.logger.org.apache.activemq.transport.AbstractInactivityMonitor=FATAL
