--- a/log4j.properties
+++ b/log4j.properties
@@ -8,3 +8,4 @@ log4j.appender.A1.target=System.err
 #log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x --> %m %n
 log4j.appender.A1.layout.ConversionPattern=[%t] %-5p %c %x --> %m %n
 #log4j.logger.org.vcell.sbml.vcell.SBMLImporter=DEBUG
+log4j.logger.cbit.vcell.util.NativeGroup=TRACE
