--- a/.classpath
+++ b/.classpath
@@ -110,7 +110,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/sshj-0.8.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jlibsedml.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jmathml.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-compress-1.8.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-compress-1.8.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://commons.apache.org/proper/commons-compress/javadocs/api-1.8.1/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="testlib/copasi_build30.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
