--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>VCellTrunk</name>
+	<name>VCell</name>
 	<comment></comment>
 	<projects>
 		<project>VCell Application Server</project>
