--- a/src/cbit/vcell/parser/Makefile
+++ b/src/cbit/vcell/parser/Makefile
@@ -1,6 +1,6 @@
-JAVACC		= java -classpath ..\..\..\..\javacc4.0.jar javacc
-JJTREE		= java -classpath ..\..\..\..\javacc4.0.jar jjtree
-JJDOC		= java -classpath ..\..\..\..\javacc4.0.jar jjdoc
+JAVACC		= java -classpath ..\..\..\..\testlib\javacc4.0.jar javacc
+JJTREE		= java -classpath ..\..\..\..\testlib\javacc4.0.jar jjtree
+JJDOC		= java -classpath ..\..\..\..\testlib\javacc4.0.jar jjdoc
 
 .jjt.jj:
 	$(JJTREE) $<
