Bug 4301: Standardize popup menu mouse processing (fix mac os problems)
svn path=/vcell/trunk/VCell/; revision=17839

--- a/vcell_localClient.properties
+++ b/vcell_localClient.properties
@@ -4,7 +4,7 @@
 #Server Info   \\cfs01.cam.uchc.edu\ifs\RAID\vcell\deployed
 #
 vcell.server.id = TEST
-vcell.softwareVersion = DanDev_Version_5.3_build_99
+vcell.softwareVersion = frmdev_Version_5.4_build_99
 #
 #JMS Info
 #
@@ -117,8 +117,8 @@ vcell.smoldyn.executable = C:\\dan\\projects\\VCell_5.3_RulesMerge\\resources\\c
 #
 # Server configuration
 #
-vcell.primarySimdatadir = \\\\cfs01.cam.uchc.edu\\ifs\\RAID\\vcell\\users\\
-vcell.secondarySimdatadir = \\\\cfs02.cam.uchc.edu\\RAID\\vcell\\users\\
+vcell.primarySimdatadir = /Users/frm/Documents/vcellUsers
+vcell.secondarySimdatadir = /Users/frm/Documents/vcellUsers
 #vcell.primarySimdatadir = /share/apps/vcell/users/
 #vcell.secondarySimdatadir = /share/apps/vcell2/users/
 vcell.tempdir = c:\\temp
