Bug 4309: working in progress, add DecoratedIssueSource to manage potentional simulation errors
svn path=/vcell/trunk/VCell/; revision=17867

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>VCell</name>
+	<name>VCellWorking</name>
 	<comment></comment>
 	<projects>
 		<project>VCell Application Server</project>
