Bug 4389 : add vcml download to vcellAPI using /biomodel/12345/vcml url.
svn path=/vcell/trunk/VCell_Rest/; revision=18139

--- a/vcell_localClient.properties
+++ b/vcell_localClient.properties
@@ -34,7 +34,7 @@ vcell.jms.topic.clientStatus = clientStatusTest
 #
 #Oracle Database Info
 #
-vcell.server.dbConnectURL = jdbc:oracle:thin:@dbs6.cam.uchc.edu:1521:orcl
+vcell.server.dbConnectURL = jdbc:oracle:thin:@VCELL-DB.cam.uchc.edu:1521/vcelldborcl.cam.uchc.edu
 vcell.server.dbDriverName = oracle.jdbc.driver.OracleDriver
 vcell.server.dbUserid = vcell
 vcell.server.dbPassword = cbittech
