--- a/vcell_test.properties
+++ b/vcell_test.properties
@@ -26,7 +26,7 @@ vcell.jms.servicePrefetchCount = 1
 #
 #Oracle Database Info
 #
-vcell.server.dbConnectURL = jdbc:oracle:thin:@dbs6.cam.uchc.edu:1521:orcl
+vcell.server.dbConnectURL = jdbc:oracle:thin:@VCELL-DB.cam.uchc.edu:1521/vcelldborcl.cam.uchc.edu
 vcell.server.dbDriverName = oracle.jdbc.driver.OracleDriver
 vcell.server.dbUserid = vcell
 vcell.server.dbPassword = cbittech
