--- a/.classpath
+++ b/.classpath
@@ -9,7 +9,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/libKiSAO.jar"/>
-	<classpathentry kind="lib" path="lib/jdom-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jdom-1.1.3.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://www.jdom.org/docs/apidocs.1.1/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/jdom-contrib-1.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/jaxen-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/xom-1.2.1.jar"/>
