Bug 4424: test fixture unique solvers directory
svn path=/vcell/trunk/VCell/; revision=18383

--- a/log4j.properties
+++ b/log4j.properties
@@ -12,3 +12,4 @@ log4j.appender.A1.layout.ConversionPattern=[%t] %-5p %c %x --> %m %n
 #log4j.logger.org.vcell.sbml.vcell.SpeciesContextSpecSBMLBridge=DEBUG
 log4j.logger.org.vcell.sbml.vcell.SBMLUnitTranslator=TRACE
 log4j.logger.cbit.vcell.client.task.ClientTaskDispatcher=DEBUG
+log4j.logger.cbit.vcell.client.ChildWindowManager=TRACE
