Bug 4465: check run_network before executing, get partial results if not supported on operating system
svn path=/vcell/trunk/VCell/; revision=18519

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>VCellWorking</name>
+	<name>BNG226</name>
 	<comment></comment>
 	<projects>
 		<project>VCell Application Server</project>
