--- a/log4j.properties
+++ b/log4j.properties
@@ -11,4 +11,5 @@ log4j.appender.A1.layout.ConversionPattern=[%t] %-5p %c %x --> %m %n
 #log4j.logger.cbit.vcell.util.NativeGroup=TRACE
 #log4j.logger.org.vcell.sbml.vcell.SpeciesContextSpecSBMLBridge=DEBUG
 log4j.logger.org.vcell.sbml.vcell.SBMLUnitTranslator=TRACE
-#log4j.logger.cbit.vcell.client.task.ClientTaskDispatcher=DEBUG
+log4j.logger.cbit.vcell.client.task.ClientTaskDispatcher=DEBUG
+log4j.logger.cbit.vcell.clientdb.ClientDocumentManager=TRACE
