Bug 4540: use log4J for management
svn path=/vcell/trunk/VCell/; revision=18796

--- a/deployInfo/log4jvcellservice.properties
+++ b/deployInfo/log4jvcellservice.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=WARN, A1 
+log4j.rootLogger=WARN, A1
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.target=System.out
@@ -10,3 +10,5 @@ log4j.appender.A1.layout.ConversionPattern=[%t] %-5p %c %x --> %m %n
 
 #produces much output by default
 log4j.logger.org.apache.activemq.transport.AbstractInactivityMonitor=FATAL
+#for awhile, until database connection problems figured out
+log4j.logger.cbit.sql.OraclePoolingConnectionFactory=INFO
