Bug 4529: server side vtk_python implementation (checking in for test deploy)
svn path=/vcell/trunk/VCell/; revision=18818

--- a/deployInfo/vcell64.properties
+++ b/deployInfo/vcell64.properties
@@ -1,22 +1,4 @@
 #
-# general compiler settings
-#
-vcell.c++.compiler = g++ -c -O2 -fexceptions 
-vcell.c++.linker = g++
-vcell.c++.objoutput = -o 
-vcell.c++.exeoutput = -o 
-vcell.c++.srcsuffix = .cpp
-vcell.c++.exesuffix = 
-vcell.c++.objectsuffix = .o
-vcell.c++.defines = -DUNIX -DLINNUX64 -DUSE_MESSAGING
-
-#
-# Finite Volume Library
-#
-vcell.c++.include = -IGENERATED_SERVER_SITE_PATH/numerics/VCell_CodeGen/include -IGENERATED_SERVER_SITE_PATH/numerics/SonicCClient64/Linux_AS4_64/include -IGENERATED_SERVER_SITE_PATH/numerics/SonicCClient64/Linux_AS4_64/include/CPP
-vcell.c++.libs = GENERATED_SERVER_SITE_PATH/numerics/bin/libvcellCodeGen.a GENERATED_SERVER_SITE_PATH/numerics//bin/libpcgwrapperCodeGen.a GENERATED_SERVER_SITE_PATH/numerics//bin/libExpressionParser.a GENERATED_SERVER_SITE_PATH/numerics//bin/libqhull.a GENERATED_SERVER_SITE_PATH/numerics//bin/libzip.a GENERATED_SERVER_SITE_PATH/numerics//bin/libunzip.a GENERATED_SERVER_SITE_PATH/numerics//bin/libPCGPack.a GENERATED_SERVER_SITE_PATH/numerics//bin/libblas.a GENERATED_SERVER_SITE_PATH/numerics//bin/libIDAWin.a GENERATED_SERVER_SITE_PATH/numerics//bin/libsundials_ida.a GENERATED_SERVER_SITE_PATH/numerics//bin/libsundials_cvode.a GENERATED_SERVER_SITE_PATH/numerics//bin/libsundials_nvecserial.a GENERATED_SERVER_SITE_PATH/numerics//bin/libsundials.a GENERATED_SERVER_SITE_PATH/numerics//bin/libnetcdf_cxx.a GENERATED_SERVER_SITE_PATH/numerics//bin/libnetcdf.a -LGENERATED_SERVER_SITE_PATH/numerics/SonicCClient64/Linux_AS4_64/bin/release/ -lsmq -lpthread -lz -lm -lgfortran
-
-#
 # Finite Volume Standalone
 #
 vcell.finitevolume.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/FiniteVolume_x64
@@ -38,7 +20,7 @@ vcell.simulation.preprocessor = GENERATED_SERVER_SITE_PATH/configs/JavaPreproces
 vcell.simulation.postprocessor = GENERATED_SERVER_SITE_PATH/configs/JavaPostprocessor64
 
 #
-# stochastic solver 
+# stochastic solver
 #
 vcell.stoch.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/VCellStoch_x64
 
@@ -94,7 +76,7 @@ vcell.server.maxJobsPerSite = 300
 vcell.htc.logdir = GENERATED_SERVER_SITE_PATH/htclogs/
 vcell.htc.jobMemoryOverheadMB = 70
 vcell.htc.user = vcell
-vcell.htc.queue = 
+vcell.htc.queue =
 vcell.htc.pbs.home = /cm/shared/apps/torque/2.5.5/bin/
 vcell.htc.sge.home = /opt/gridengine/bin/lx26-amd64/
 vcell.htc.sgeModulePath = /etc/modulefiles/htc/sge
@@ -119,3 +101,9 @@ vcell.htc.mpi.home = /share/apps/vcell2/mpich/
 #
 vcell.client.timeoutMS = 600000
 
+#
+# vtk python
+#
+vcell.vtkPythonExecutablePath = /share/apps/vcell2/vtk/usr/bin/vcellvtkpython
+vcell.vtkService =  GENERATED_SERVER_SITE_PATH/visTool
+#vcell.vtkPythonModulePath = set if needed to pick up python modules
