Bug 4529 - Robust vtk-java processing on server and client (server-side vtk/python error handling).
svn path=/vcell/trunk/VCell/; revision=18855

--- a/deployInfo/log4jvcellservice.properties
+++ b/deployInfo/log4jvcellservice.properties
@@ -5,6 +5,9 @@ log4j.appender.A1.target=System.out
 log4j.appender.A1.follow=true
 log4j.appender.A1.layout.ConversionPattern=[%t] %-5p %c %x --> %m %n
 
+# until vtk processing works perfectly
+log4j.logger.org.vcell.vis=DEBUG
+
 #example configuration
 #log4j.logger.cbit.vcell.message.server.htc.HtcProxy=DEBUG
 
