Bug 4529 - Robust vtk-java processing on server and client (server-side vtk/python paths).
svn path=/vcell/trunk/VCell/; revision=18858

--- a/deployInfo/vcell64.properties
+++ b/deployInfo/vcell64.properties
@@ -105,5 +105,5 @@ vcell.client.timeoutMS = 600000
 # vtk python
 #
 vcell.vtkPythonExecutablePath = /share/apps/vcell2/vtk/usr/bin/vcellvtkpython
-vcell.vtkService =  GENERATED_SERVER_SITE_PATH/visTool
+vcell.visToolPath =  GENERATED_SERVER_SITE_PATH/visTool
 #vcell.vtkPythonModulePath = set if needed to pick up python modules
