Bug 3787: cleanup - root to WARN, no package / class loggers set
svn path=/vcell/trunk/VCell/; revision=18912

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=FATAL, A1 
+log4j.rootLogger=WARN, A1 
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.target=System.err
@@ -7,9 +7,4 @@ log4j.appender.A1.target=System.err
 #log4j.logger.java.sql=DEBUG
 #log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x --> %m %n
 log4j.appender.A1.layout.ConversionPattern=[%t] %-5p %c %x --> %m %n
-#log4j.logger.org.vcell.sbml.vcell.SBMLImporter=DEBUG
-#log4j.logger.cbit.vcell.util.NativeGroup=TRACE
-#log4j.logger.org.vcell.sbml.vcell.SpeciesContextSpecSBMLBridge=DEBUG
-log4j.logger.org.vcell.sbml.vcell.SBMLUnitTranslator=TRACE
-log4j.logger.cbit.vcell.client.task.ClientTaskDispatcher=DEBUG
-log4j.logger.cbit.vcell.clientdb.ClientDocumentManager=TRACE
+#log4j.logger.cbit.vcell.client.task.ClientTaskDispatcher=DEBUG
