--- a/deployInfo/vcell64.properties
+++ b/deployInfo/vcell64.properties
@@ -1,34 +1,16 @@
 #
-# general compiler settings
-#
-vcell.c++.compiler = g++ -c -O2 -fexceptions 
-vcell.c++.linker = g++
-vcell.c++.objoutput = -o 
-vcell.c++.exeoutput = -o 
-vcell.c++.srcsuffix = .cpp
-vcell.c++.exesuffix = 
-vcell.c++.objectsuffix = .o
-vcell.c++.defines = -DUNIX -DLINNUX64 -DUSE_MESSAGING
-
-#
-# Finite Volume Library
-#
-vcell.c++.include = -IGENERATED_SERVER_SITE_PATH/numerics/VCell_CodeGen/include -IGENERATED_SERVER_SITE_PATH/numerics/SonicCClient64/Linux_AS4_64/include -IGENERATED_SERVER_SITE_PATH/numerics/SonicCClient64/Linux_AS4_64/include/CPP
-vcell.c++.libs = GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libvcellCodeGen.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libpcgwrapperCodeGen.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libExpressionParser.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libqhull.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libzip.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libunzip.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libPCGPack.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libblas.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libIDAWin.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libsundials_ida.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libsundials_cvode.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libsundials_nvecserial.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libsundials.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libnetcdf_cxx.a GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/libnetcdf.a -LGENERATED_SERVER_SITE_PATH/numerics/SonicCClient64/Linux_AS4_64/bin/release/ -lsmq -lpthread -lz -lm -lgfortran
-
-#
 # Finite Volume Standalone
 #
-vcell.finitevolume.executable = GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/FiniteVolume_x64
+vcell.finitevolume.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/FiniteVolume_x64
 #
 # Chombo Refined Grids PDE Solver
 #
-vcell.chombo.executable.2d = GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/VCellChombo2D_x64
-vcell.chombo.executable.3d = GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/VCellChombo3D_x64
+vcell.chombo.executable.2d = GENERATED_SERVER_SITE_PATH/numerics/bin/VCellChombo2D_x64
+vcell.chombo.executable.3d = GENERATED_SERVER_SITE_PATH/numerics/bin/VCellChombo3D_x64
 #
 # stiff ODE solver library
 #
-vcell.sundialsSolver.executable = GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/SundialsSolverStandalone_x64
+vcell.sundialsSolver.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/SundialsSolverStandalone_x64
 
 #
 # java simulation executable
@@ -38,21 +20,25 @@ vcell.simulation.preprocessor = GENERATED_SERVER_SITE_PATH/configs/JavaPreproces
 vcell.simulation.postprocessor = GENERATED_SERVER_SITE_PATH/configs/JavaPostprocessor64
 
 #
-# stochastic solver 
+# stochastic solver
 #
-vcell.stoch.executable = GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/VCellStoch_x64
+vcell.stoch.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/VCellStoch_x64
 
 #
 # hybrid stochastic solvers
 #
-vcell.hybridEM.executable = GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/Hybrid_EM_x64
-vcell.hybridMil.executable = GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/Hybrid_MIL_x64
-vcell.hybridMilAdaptive.executable = GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/Hybrid_MIL_Adaptive_x64
+vcell.hybridEM.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/Hybrid_EM_x64
+vcell.hybridMil.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/Hybrid_MIL_x64
+vcell.hybridMilAdaptive.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/Hybrid_MIL_Adaptive_x64
 
 #
 # smoldyn spatial stochastic solver
 #
-vcell.smoldyn.executable = GENERATED_SERVER_SITE_PATH/numerics/cmake-build/bin/smoldyn_x64
+vcell.smoldyn.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/smoldyn_x64
+#
+# NFSim
+#
+vcell.nfsim.executable = GENERATED_SERVER_SITE_PATH/numerics/bin/NFsim_x64
 
 #
 # Server configuration
@@ -79,10 +65,10 @@ vcell.limit.jobMemoryMB = 20000
 #
 # Quota info
 #
-vcell.server.maxOdeJobsPerUser = 10
-vcell.server.maxPdeJobsPerUser = 10
+vcell.server.maxOdeJobsPerUser = 20
+vcell.server.maxPdeJobsPerUser = 20
 vcell.server.maxJobsPerScan = 100
-vcell.server.maxJobsPerSite = 100
+vcell.server.maxJobsPerSite = 300
 
 #
 # HTC info
@@ -90,11 +76,12 @@ vcell.server.maxJobsPerSite = 100
 vcell.htc.logdir = GENERATED_SERVER_SITE_PATH/htclogs/
 vcell.htc.jobMemoryOverheadMB = 70
 vcell.htc.user = vcell
-vcell.htc.queue = 
+vcell.htc.queue =
 vcell.htc.pbs.home = /cm/shared/apps/torque/2.5.5/bin/
 vcell.htc.sge.home = /opt/gridengine/bin/lx26-amd64/
 vcell.htc.sgeModulePath = /etc/modulefiles/htc/sge
 vcell.htc.pbsModulePath = /etc/modulefiles/htc/pbs
+vcell.htc.mpi.home = /share/apps/vcell2/mpich/
 
 #
 # uncomment to specify which PBS or SGE submission queue to use for simulation jobs.
@@ -114,3 +101,9 @@ vcell.htc.pbsModulePath = /etc/modulefiles/htc/pbs
 #
 vcell.client.timeoutMS = 600000
 
+#
+# vtk python
+#
+vcell.vtkPythonExecutablePath = /share/apps/vcell2/vtk/usr/bin/vcellvtkpython
+vcell.visToolPath =  GENERATED_SERVER_SITE_PATH/visTool
+#vcell.vtkPythonModulePath = set if needed to pick up python modules
